--- a/index.html
+++ b/index.html
@@ -1,25 +1,74 @@
-<!DOCTYPE html> <!-- Tells the browser this is an HTML5 document -->
-<html lang="en"> <!-- The lang="en" attribute specifies the page's language, useful for search engines-->
-    <head> <!-- Head element contains metadata, aka info about the doc not displayed on page like title, character set, and links -->
-        <meta charset="UTF-8"> <!-- Sets character encoding to UTF-8, supporting most characters -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures proper scaling on mobile devices -->
-        <title>Document</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <p>This instructions for this page are to: </p>
-        <ol>
-            <li>Add your name</li>
-            <li>Add a title to introduce yourself (such as "about")</li>
-            <li>Add one or more paragraphs containing your bio</li>
-            <li>Add a quote</li>
-            <li>Add a copyright note</li>
-        </ol>
-        <hr>
-        <h1>Welcome to My Personal Site</h1>
-        <section class="about">
-            <h2>Who is this guy?</h2>
-            <p>Well I am <b>so</b> glad you asked my friend! My name is <span class="name">Adam Lovell</span>, the most amazing person you'll ever meet. Now where is all of this <i>incredulous</i> confidence coming from , you may ask. Fear not beautiful user, I will tell you my secrets, ONLY if you <i>promise</i> to keep them hidden.</p> 
-        </section>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Adam Lovell | Developer Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+
+  <!-- Hero Section -->
+  <header id="hero" class="section hero">
+    <h1 class="hero-title">Adam Lovell</h1>
+    <p class="hero-subtitle">Aspiring Web & App Developer | BAS Instructor</p>
+    <div class="hero-links">
+      <a href="resume.pdf" class="btn" download>📄 Download Resume</a>
+      <a href="mailto:adam_lovell@student.uml.edu" class="btn">📧 Contact Me</a>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="section about">
+    <h2 class="section-title">About Me</h2>
+    <p class="about-text">
+      I'm a Program Manager & Lead Instructor at Roxbury Community College, pursuing a B.S. in IT at UMass Lowell.
+      I’m building my web/app dev skill set while running OmniForge — a digital initiative for human optimization tools.
+    </p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="section projects">
+    <h2 class="section-title">Projects</h2>
+    <div class="project-list">
+
+      <div class="project-card" id="portfolio-project">
+        <h3 class="project-title">📌 Portfolio Website</h3>
+        <p class="project-desc">Responsive one-pager built from scratch with HTML/CSS/JS.</p>
+        <a href="#" class="project-link">View Project</a>
+      </div>
+
+      <div class="project-card" id="resume-project">
+        <h3 class="project-title">📌 Resume Page</h3>
+        <p class="project-desc">Online résumé with download link and responsive layout.</p>
+        <a href="resume.pdf" class="project-link">View Resume</a>
+      </div>
+
+      <div class="project-card" id="todo-project">
+        <h3 class="project-title">📌 Simple To-Do App</h3>
+        <p class="project-desc">Beginner React app with full CRUD and local storage.</p>
+        <a href="#" class="project-link">View Repo</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section contact">
+    <h2 class="section-title">Let’s Connect</h2>
+    <ul class="contact-links">
+      <li><strong>Email:</strong> <a href="mailto:adam_lovell@student.uml.edu">adam_lovell@student.uml.edu</a></li>
+      <li><strong>Cell:</strong> (617) XXX-XXXX</li>
+      <li><strong>GitHub:</strong> <a href="https://github.com/OmniForgeInquisitor" target="_blank">OmniForgeInquisitor</a></li>
+      <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/adamlovell" target="_blank">linkedin.com/in/adamlovell</a></li>
+    </ul>
+  </section>
+
+  <!-- Footer -->
+  <footer id="footer" class="section footer">
+    <p class="footer-text">© 2025 Adam Lovell. Built with code, coffee, and Copilot ☕</p>
+  </footer>
+
+</body>
 </html>
