Added unordered list and new wording for portfolio page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="nav">
             <!-- Logo/name on the left -->
             <div class="nav__logo">
-                <a href="#home" class="nav__link">Adam Lovell</a>
+                <a href="#home" class="nav__link">Adam Lovell Portfolio Site</a>
             </div>
             <!-- Navigation menu -->
             <ul class="nav__menu" id="nav-menu">
@@ -81,14 +81,24 @@
                 <div class="home__content">
                     <!-- Main heading with name -->
                     <h1 class="home__title">
-                        Hi, I'm <span class="home__title-color">Adam Lovell</span>
+                        Welcome to my page! <br> My name is <span class="home__title-color">Adam Lovell!</span>
                     </h1>
                     <!-- Subtitle with role -->
-                    <h2 class="home__subtitle">Web Developer</h2>
-                    <!-- Brief description -->
+                    <h2 class="home__subtitle">Front-End Web Developer</h2>
+                    <!-- Brief description with introductory paragraph -->
                     <p class="home__description">
-                        Passionate about creating beautiful, functional, and user-friendly websites. 
-                        Specializing in modern web technologies and delivering exceptional digital experiences.
+                        Bringing my vividly creative and imaginative web worlds to life is a burning passion of mine!
+                        I take tremendous pride in my work by delivering:
+                    </p>
+                    <!-- Key deliverables list - semantically correct as a separate element from paragraph -->
+                    <ul class="home__deliverables">
+                        <li>Responsive, well organized designs.</li>
+                        <li>Functional, clean websites.</li>
+                        <li>Accessible and user-friendly experiences.</li>
+                    </ul>
+                    <!-- Closing statement paragraph -->
+                    <p class="home__description">
+                        I accept nothing less than shipping incredible digital experiences!
                     </p>
                     <!-- Social media links container -->
                     <div class="home__social">
@@ -138,7 +148,7 @@
                 <!-- Section title -->
                 <h2 class="section__title">About Me</h2>
                 <!-- Section subtitle -->
-                <p class="section__subtitle">Learn more about my background and expertise</p>
+                <p class="section__subtitle">Learn more about my background and experience.</p>
                 
                 <!-- About content grid -->
                 <div class="about__container grid">
